postcss/testData/inspections/customPropertiesSet/emptyCustomPropertiesSetName.pcss
@apply <error descr="Custom property set name should not be empty">--</error>;